overflow fix?

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,13 +3,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  // border: 0.1px solid red;
 }
 body {
   font-family: "Ubuntu", sans-serif;
   background-color: $primaryColor;
   color: $textColor;
   font-size: 1.2rem;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 section {
   padding: 10px;
